force-app/main/default/objects/GPMS_Interface_Logging__c/GPMS_Interface_Logging__c.object-meta.xml
<CustomObject>
    <description>Manage the health of the interface connection to GPMS to perform exception handling</description>
    <label>Interface Logging</label>
    <nameField>
        <displayFormat>IFL-{00000}</displayFormat>
        <label>Interface Logging ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interface Logging</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>