force-app/main/default/objects/GPMS_Interface_Logging__c/fields/GPMS_Change_Type__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Change_Type__c</fullName>
    <description>The user action of the CDC Event</description>
    <label>Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CREATE</fullName>
            </value>
            <value>
                <fullName>UPDATE</fullName>
            </value>
            <value>
                <fullName>DELETE</fullName>
            </value>
            <value>
                <fullName>UNDELETE</fullName>
            </value>
            <value>
                <fullName>GAP_CREATE</fullName>
            </value>
            <value>
                <fullName>GAP_UPDATE</fullName>
            </value>
            <value>
                <fullName>GAP_DELETE</fullName>
            </value>
            <value>
                <fullName>GAP_UNDELETE</fullName>
            </value>
            <value>
                <fullName>GAP_OVERFLOW.</fullName>
            </value>
            <value>
                <fullName>ServiceCombine</fullName>
            </value>
            <value>
                <fullName>ServiceCombineCancel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>