force-app/main/default/objects/GPMS_Interface_Logging__c/fields/GPMS_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Entity_Name__c</fullName>
    <description>The related object of the CDC Event.</description>
    <label>Entity Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>