force-app/main/default/objects/GPMS_Interface_Logging__c/fields/GPMS_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Error_Message__c</fullName>
    <description>The error message of the integration to down stream</description>
    <label>Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>