force-app/main/default/objects/GPMS_Interface_Logging__c/fields/GPMS_Interface__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Interface__c</fullName>
    <description>The interface of the downstream.</description>
    <label>Interface</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACMPS</fullName>
            </value>
            <value>
                <fullName>NICCMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>