force-app/main/default/objects/GPMS_Interface_Logging__c/fields/GPMS_Mulesoft_External_ID__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Mulesoft_External_ID__c</fullName>
    <description>GPMS Mulesoft External ID</description>
    <externalId>true</externalId>
    <label>GPMS Mulesoft External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>