force-app/main/default/objects/GPMS_Interface_Logging__c/fields/GPMS_ReplayId__c.field-meta.xml
<CustomField>
    <fullName>GPMS_ReplayId__c</fullName>
    <description>The ReplayId of the CDC Event</description>
    <label>ReplayId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>