force-app/main/default/objects/GPMS_Interface_Logging__c/fields/GPMS_Request_Payload__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Request_Payload__c</fullName>
    <description>The payload sent to the downstream.</description>
    <label>Request Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>