force-app/main/default/objects/GPMS_Interface_Logging__c/fields/GPMS_Request_Payload_Sent_TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Request_Payload_Sent_TimeStamp__c</fullName>
    <description>The time that send the request payload to downstream.</description>
    <label>Request Payload Sent TimeStamp</label>
    <type>DateTime</type>
</CustomField>