force-app/main/default/objects/GPMS_Interface_Logging__c/fields/GPMS_Response_Message_ID__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Response_Message_ID__c</fullName>
    <description>The response Id of the downstream integration</description>
    <label>Response Message ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>