force-app/main/default/objects/GPMS_Interface_Logging__c/fields/GPMS_Response_Payload__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Response_Payload__c</fullName>
    <description>The response payload of the downstream</description>
    <label>Response Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>