force-app/main/default/objects/GPMS_Interface_Logging__c/fields/GPMS_Response_TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Response_TimeStamp__c</fullName>
    <description>The time that received the response of downstream</description>
    <label>Response TimeStamp</label>
    <type>DateTime</type>
</CustomField>