force-app/main/default/objects/GPMS_Interface_Logging__c/fields/GPMS_Salesforce_ID__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Salesforce_ID__c</fullName>
    <label>Salesforce ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>